test/fixtures/errors/lodash-unknown-method-member/input.mjs
import { unknown } from 'lodash';

unknown();
